Fix related to the alignment of works section

--- a/assets/sass/media-queries/_index-responsive.scss
+++ b/assets/sass/media-queries/_index-responsive.scss
@@ -327,6 +327,7 @@
 .works {
 
   .items {
+    justify-content: center;
 
     .item {
       width: 49%;
